--- a/webpack/npmTest/package.json
+++ b/webpack/npmTest/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test2": "echo \"그냥 만들어 봤습니다.\" && exit 1"
+    "test2": "echo \"그냥 만들어 봤습니다.\" && exit 1",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,8 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1"
   }
